# hugovte

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  build.rs  lcov.info  macos_bridge.m  plan-ansi.md  plan-vte-v2.md  plan-vte.md  run_fuzzing.sh  setup_fuzzing.sh  tarpaulin-report.html  test_all.sh
.clinerules/: code-rules.md
.github/workflows/: ci.yml  release.yml
crates/vte-ansi/: BENCHMARKS.md  Cargo.toml  README.md  run_fuzzing.sh  setup_fuzzing.sh
crates/vte-ansi/benches/: parser_bench.rs
crates/vte-ansi/examples/: parse_colored_text.rs  streaming_parser.rs  terminal_grid.rs
crates/vte-ansi/fuzz/: Cargo.toml
crates/vte-ansi/fuzz/fuzz_targets/: parser_basic.rs  parser_osc.rs  parser_sgr.rs  parser_state.rs  parser_utf8.rs
crates/vte-ansi/scripts/: bench.sh  run_fuzzing.sh  setup_fuzzing.sh
crates/vte-ansi/src/: ansi.bkup  color.rs  grid.rs  lib.rs  parser.rs  parser_backup.rs  parser_broken.rs  temp_parser.rs
crates/vte-ansi/tests/: ansi_integration_tests.rs
crates/vte-core/: Cargo.toml
crates/vte-core/src/: ansi.rs  config.rs  constants.rs  drawing.rs  dummy_backend.rs  error.rs  grid.rs  input.rs  lib.rs  security.rs  selection.rs  terminal.rs  traits.rs
crates/vte-core/src/font/: cache.rs  discovery.rs  fallback.rs  mod.rs
crates/vte-gtk/: Cargo.toml
crates/vte-gtk/src/: lib.rs
crates/vte-gtk4/: Cargo.toml
crates/vte-gtk4/src/: backend.rs  cairo_renderer.rs  input.rs  lib.rs  terminal.rs
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  COMPATIBILITY.md  MIGRATION.md
examples/: sgr_demo.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parser_basic.rs  parser_osc.rs  parser_sgr.rs  parser_state.rs  parser_utf8.rs
src/: ansi.rs  config.rs  constants.rs  drawing.rs  error.rs  grid.rs  input.rs  lib.rs  main.rs  selection.rs  terminal.rs  vte.rs
tests/: ansi_integration_tests.rs
