[package]
name = "vte-ansi"
version = "0.1.0"
edition = "2021"
authors = ["Hugo <hugo@example.com>"]
license = "MIT OR Apache-2.0"
description = "A comprehensive UTF-8-safe ANSI/VT escape sequence parser"
keywords = ["ansi", "vt", "terminal", "parser", "escape-sequences"]
categories = ["parsing", "command-line-interface"]

[dependencies]
memchr = "2.7"
base64 = "0.22"


[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
rand = "0.9"  # You already have this for tests

[[bench]]
name = "parser_bench"
harness = false

[profile.bench]
debug = true  # Enable debug symbols for profiling