[package]
name = "vte-ansi"
version = "0.1.0"
edition = "2021"
authors = ["Hugo <hugo@example.com>"]
license = "MIT OR Apache-2.0"
description = "A fast, memory-safe ANSI/VT escape sequence parser for terminal applications"
readme = "README.md"
documentation = "https://docs.rs/vte-ansi"
homepage = "https://github.com/hugomf/hugovte"
repository = "https://github.com/hugomf/hugovte/tree/master/crates/vte-ansi"
keywords = ["ansi", "vt", "terminal", "parser", "escape-sequences", "vt100", "xterm", "utf8", "no-panic"]
categories = ["parsing", "terminal-interface", "no-std"]
exclude = [
    "**/*.profraw",
    "**/*.profdata",
    "**/*.remot",
    "**/Cargo.lock",
    "Cargo.toml.orig"
]

[dependencies]
memchr = "2.7"
base64 = "0.22"


[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
rand = "0.9"  # You already have this for tests

[[bench]]
name = "parser_bench"
harness = false

[profile.bench]
debug = true  # Enable debug symbols for profiling
