[package]
name = "vte-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Hugo <hugo@example.com>"]
license = "MIT OR Apache-2.0"
description = "GTK-agnostic virtual terminal emulator core with VTE compliance"
keywords = ["terminal", "vte", "ansi", "emulator", "gtk-agnostic"]
categories = ["command-line-interface", "emulators"]

[dependencies]
portable-pty = "0.9"
fontdue = "0.9"
memchr = "2.7"
thiserror = "1.0"
gtk4 = "0.10"
cairo-rs = { version = "0.21", features = ["png"] }
pango = "0.21"
glib = "0.21"
async-channel = "2.5"
rand = "0.9"
anyhow = "1.0"
vte-ansi = { path = "../vte-ansi" }
unicode-segmentation = "1.10"
unicode-width = "0.1"
unicode-bidi = "0.3"

[features]
default = ["mouse", "selection", "alternate_screen"]
mouse = []
selection = []
cursor_blink = []
alternate_screen = []
ime = []
opengl = []
kitty = []
sixel = []
